tests/profile/error/camera/gotogeo_missing_longitude.profile
{
  "version": { "major": 12, "minor": 13 },
  "camera": {
    "type": "goToGeo",
    "anchor": "anchor",
    "latitude": 1.0,
    "altitude": 4.0
  }
}
